[package]
name = "rondo-mundi-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
actix-cors = { version = "0.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
